# geoscape

./: CMakeLists.txt  README.md  index.html  main.js  package-lock.json  package.json  shell.nix
public/: index.html
src/: camera.ts  chunk.ts  input.ts  main.ts
src/core/: chunk.ts  chunkManager.ts  generator.ts  given_generator.ts  gridSquare.ts
src/render/: bb_vertex.glsl  camera.ts  fragment.glsl  renderer.ts
